--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -187,7 +187,7 @@
 					<div class="mx-auto rounded-2xl bg-gray-700 w-3/5 text-center mt-40">
 						<img src="../../img/header.png" class="h-16 w-16 relative top-5" />
 						<h2>Settings</h2>
-						<h4>You can configure the app setting here.</h4>
+						<h4>You can configure the app settings here.</h4>
 						<button class="buttoni mb-6" onclick="hide()">
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
@@ -200,7 +200,7 @@
 					<div class="mx-auto text-center mt-20 mb-20 pt-5 pb-10 rounded-2xl bg-gray-700 w-3/5">
 						<div id="setting" class="tabcontent">
 							<h3>Launch on startup</h3>
-							<h4>Start the app after the operating system loaded. The app will start on the tray.</h4>
+							<h4>Start the app after the operating system started. The app will start on the tray.</h4>
 							<div class="flex justify-center items-center w-72 h-16 bg-white mx-auto rounded-full">
 								<div class="relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
 									<input id="tgl0" onclick="startup()" type="checkbox" class="toggle checked:bg-white outline-none focus:outline-none right-5 duration-200 ease-in absolute block w-4 h-4 rounded-full top-1 bg-black appearance-none cursor-pointer" />
@@ -210,7 +210,7 @@
 							</div>
 							<hr />
 							<h3>Close app to tray</h3>
-							<h4>On closing the app will not quit. You can open the app from the tray menu.</h4>
+							<h4>On closing the app will not quit. You can open the app from the tray.</h4>
 							<div class="flex justify-center items-center w-72 h-16 bg-white mx-auto rounded-full">
 								<div class="relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
 									<input id="tgl1" onclick="tray()" type="checkbox" class="toggle checked:bg-white outline-none focus:outline-none right-5 duration-200 ease-in absolute block w-4 h-4 rounded-full top-1 bg-black appearance-none cursor-pointer" />
@@ -236,7 +236,7 @@
 								<h4>Uses GPU for smoother experience. Enable this option if you experience frame drops or lags.</h4>
 								<div class="flex justify-center items-center w-72 h-16 bg-white mx-auto rounded-full">
 									<a href="#" onclick="hardware()">
-										<div class="noclick relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
+										<div class="pointer-events-none relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
 											<input tabindex="-1" id="tgl7" type="checkbox" class="toggle checked:bg-white outline-none focus:outline-none right-5 duration-200 ease-in absolute block w-4 h-4 rounded-full top-1 bg-black appearance-none cursor-pointer" />
 											<label for="tgl7" class="toggle-bg block overflow-hidden h-6 rounded-full bg-white cursor-pointer"></label></div
 									></a>
@@ -254,7 +254,7 @@
 							</button>
 							<hr />
 							<h3>Open folders</h3>
-							<h4>You can open the folders Authme uses to function. Editing or deleting files might cause a crash.</h4>
+							<h4>You can open the folders Authme uses to function. Editing or deleting files might cause problems.</h4>
 							<div class="flex justify-center gap-3 flex-row flex-wrap">
 								<button class="buttoni" id="but3" onclick="folder0()">
 									<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -295,12 +295,12 @@
 						</div>
 
 						<!-- codes -->
-						<div id="codes" class="tabcontent part">
-							<h3>Show 2FA names</h3>
-							<p class="text3">The saved 2FA names will show up. You can copy it after clicking it.</p>
+						<div id="codes" class="tabcontent part hidden">
+							<h3>Show 2FA descriptions</h3>
+							<p class="text3">The saved 2FA description will be visible. You can copy it after clicking it.</p>
 							<div class="flex justify-center items-center w-72 h-16 bg-white mx-auto rounded-full">
 								<a href="#" onclick="names()">
-									<div class="noclick relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
+									<div class="pointer-events-none relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
 										<input tabindex="-1" id="tgl3" type="checkbox" class="toggle checked:bg-white outline-none focus:outline-none right-5 duration-200 ease-in absolute block w-4 h-4 rounded-full top-1 bg-black appearance-none cursor-pointer" />
 										<label for="tgl3" class="toggle-bg block overflow-hidden h-6 rounded-full bg-white cursor-pointer"></label></div
 								></a>
@@ -312,7 +312,7 @@
 							<p class="text3">Blurs the 2FA code. You can still copy it or hover over it to reveal.</p>
 							<div class="flex justify-center items-center w-72 h-16 bg-white mx-auto rounded-full">
 								<a href="#" onclick="reveal()">
-									<div class="noclick relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
+									<div class="pointer-events-none relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
 										<input tabindex="-1" id="tgl4" type="checkbox" class="toggle checked:bg-white outline-none focus:outline-none right-5 duration-200 ease-in absolute block w-4 h-4 rounded-full top-1 bg-black appearance-none cursor-pointer" />
 										<label for="tgl4" class="toggle-bg block overflow-hidden h-6 rounded-full bg-white cursor-pointer"></label></div
 								></a>
@@ -324,7 +324,7 @@
 							<p class="text3">Keep your search history. Works even after restart.</p>
 							<div class="flex justify-center items-center w-72 h-16 bg-white mx-auto rounded-full">
 								<a href="#" onclick="results()">
-									<div class="noclick relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
+									<div class="pointer-events-none relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
 										<input tabindex="-1" id="tgl5" type="checkbox" class="toggle checked:bg-white outline-none focus:outline-none right-5 duration-200 ease-in absolute block w-4 h-4 rounded-full top-1 bg-black appearance-none cursor-pointer" />
 										<label for="tgl5" class="toggle-bg block overflow-hidden h-6 rounded-full bg-white cursor-pointer"></label></div
 								></a>
@@ -333,10 +333,10 @@
 							<br />
 							<hr />
 							<h3>Reset search after copy</h3>
-							<p class="text3">Reset the search bar after you copied your code. Useful if you copy a lot of codes.</p>
+							<p class="text3">Reset the search bar after you copied a code. Useful if you copy and search for a lot of codes.</p>
 							<div class="flex justify-center items-center w-72 h-16 bg-white mx-auto rounded-full">
 								<a href="#" onclick="copy()">
-									<div class="noclick relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
+									<div class="pointer-events-none relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
 										<input tabindex="-1" id="tgl6" type="checkbox" class="toggle checked:bg-white outline-none focus:outline-none right-5 duration-200 ease-in absolute block w-4 h-4 rounded-full top-1 bg-black appearance-none cursor-pointer" />
 										<label for="tgl6" class="toggle-bg block overflow-hidden h-6 rounded-full bg-white cursor-pointer"></label></div
 								></a>
@@ -345,7 +345,7 @@
 						</div>
 
 						<!-- shortcuts -->
-						<div id="shortcuts" class="tabcontent part">
+						<div id="shortcuts" class="tabcontent part hidden">
 							<h3>Shortcuts</h3>
 							<h4>
 								You can modify the shortcuts here, if you don't understand something just read the docs.
@@ -363,7 +363,7 @@
 							<br />
 							<div class="flex flex-col md:w-4/5 lg:w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
 								<div class="flex justify-center items-center">
-									<h3>Show app</h3>
+									<h3>Show/Hide app</h3>
 								</div>
 
 								<div class="flex justify-center items-center">
@@ -787,7 +787,7 @@
 							<br />
 							<div class="flex flex-col md:w-4/5 lg:w-2/3 mx-auto rounded-2xl bg-gray-800 mb-20">
 								<div class="flex justify-center items-center">
-									<h3>Show app</h3>
+									<h3>Show/Hide app</h3>
 								</div>
 								<div class="flex justify-center items-center">
 									<input class="input1" disabled type="text" id="hk100_input" />
@@ -888,30 +888,30 @@
 						</div>
 
 						<!-- experimental -->
-						<div id="experimental" class="tabcontent part">
+						<div id="experimental" class="tabcontent part hidden">
 							<h3>Sort codes</h3>
 							<p class="text3">You can choose how to sort the saved and loaded codes. By default codes are sorted by uploading order.</p>
 							<div class="dropdown">
 								<button class="dropdown-button" id="drp0" onclick="dropdown()">
-									<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 9l4-4 4 4m0 6l-4 4-4-4" />
+									<svg id="sort_svg" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+										<path id="sort_path" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 9l4-4 4 4m0 6l-4 4-4-4" />
 									</svg>
 									Default
 								</button>
 								<div class="dropdown-content animation">
-									<a tabindex="0" class="dropdown-link" href="#" onclick="dropdownChoose(0)">
+									<a tabindex="0" id="link0" class="dropdown-link" href="#" onclick="dropdownChoose(0)">
 										<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 											<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 9l4-4 4 4m0 6l-4 4-4-4" />
 										</svg>
 										Default
 									</a>
-									<a tabindex="0" class="dropdown-link" href="#" onclick="dropdownChoose(1)">
+									<a tabindex="0" id="link1" class="dropdown-link" href="#" onclick="dropdownChoose(1)">
 										<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 											<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 4h13M3 8h9m-9 4h9m5-4v12m0 0l-4-4m4 4l4-4" />
 										</svg>
 										A-Z
 									</a>
-									<a tabindex="0" class="dropdown-link" href="#" onclick="dropdownChoose(2)">
+									<a tabindex="0" id="link2" class="dropdown-link" href="#" onclick="dropdownChoose(2)">
 										<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 											<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 4h13M3 8h9m-9 4h6m4 0l4-4m0 0l4 4m-4-4v12" />
 										</svg>
@@ -926,7 +926,7 @@
 							<p class="text3">You can use your webcam to scan QR code(s). Works well with high quality webcams.</p>
 							<div class="flex justify-center items-center w-72 h-16 bg-white mx-auto rounded-full">
 								<a href="#" onclick="webcam()">
-									<div class="noclick relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
+									<div class="pointer-events-none relative inline-block w-10 mr-2 align-middle select-none bg-gray-900 border-2 border-gray-900 rounded-full">
 										<input tabindex="-1" id="tgl8" type="checkbox" class="toggle checked:bg-white outline-none focus:outline-none right-5 duration-200 ease-in absolute block w-4 h-4 rounded-full top-1 bg-black appearance-none cursor-pointer" />
 										<label for="tgl8" class="toggle-bg block overflow-hidden h-6 rounded-full bg-white cursor-pointer"></label></div
 								></a>
