--- a/app/import/index.html
+++ b/app/import/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:" />
 		<meta charset="UTF-8" />
 		<!-- js -->
-		<script defer src="./src/js/index.js"></script>
+		<script defer src="./index.js"></script>
 		<!-- css -->
 		<link rel="stylesheet" href="../.././styles/global.css" />
 		<link rel="stylesheet" href="../../styles/tailwind.css" />
@@ -118,9 +118,33 @@
 						</div>
 					</div>
 
-					<details class="details mb-5 transform duration-200 ease-in">
+					<details open class="details mb-5 transform duration-200 ease-in">
 						<summary data-loc class="summary mx-auto mt-3 mb-10 cursor-pointer font-bold">More options</summary>
 
+						<div class="screenCapture m-1 mt-5">
+							<button class="buttoni w-[576px] sm:w-72" onclick="captureFromScreen()">
+								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+									<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+									<rect x="3" y="4" width="18" height="12" rx="1"></rect>
+									<line x1="7" y1="20" x2="17" y2="20"></line>
+									<line x1="9" y1="16" x2="9" y2="20"></line>
+									<line x1="15" y1="16" x2="15" y2="20"></line>
+								</svg>
+								<span data-loc>Capture screen</span>
+							</button>
+							<div class="flex flex-row gap-3">
+								<h5 data-loc class="m-0 pt-4 pb-4">Capture a 2FA QR code from your screen.</h5>
+								<div class="tooltipContainer">
+									<span class="tooltip -mt-[48px] w-max text-base">
+										You will have 5 seconds to navigate to the QR code you want to import. <br />
+										Authme will capture your screen and import the QR code.
+									</span>
+									<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+										<path stroke-linecap="round" stroke-linejoin="round" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+									</svg>
+								</div>
+							</div>
+						</div>
 						<div class="useWebcam m-1">
 							<button class="buttoni" onclick="useWebcam()">
 								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -137,31 +161,6 @@
 									<span class="tooltip w-max text-base">Make sure no program uses your webcam.</span>
 									<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
 										<path stroke-linecap="round" stroke-linejoin="round" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-									</svg>
-								</div>
-							</div>
-						</div>
-						<div class="screenCapture m-1 mt-5">
-							<button class="buttoni w-[576px] sm:w-72" onclick="captureFromScreen()">
-								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-									<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-									<rect x="3" y="4" width="18" height="12" rx="1"></rect>
-									<line x1="7" y1="20" x2="17" y2="20"></line>
-									<line x1="9" y1="16" x2="9" y2="20"></line>
-									<line x1="15" y1="16" x2="15" y2="20"></line>
-								</svg>
-								<span data-loc>Capture screen</span>
-							</button>
-							<div class="flex flex-row gap-3">
-								<h5 data-loc class="m-0 pt-4 pb-6">Capture a 2FA QR code from your screen.</h5>
-								<div class="tooltipContainer">
-									<span class="tooltip -mt-[72px] w-max text-base">
-										This is a preview feature! <br />
-										Make sure that the picture is visible <br />
-										under the application window.
-									</span>
-									<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-										<path stroke-linecap="round" stroke-linejoin="round" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
 									</svg>
 								</div>
 							</div>
