--- a/app/confirm/index.html
+++ b/app/confirm/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'" />
 		<meta charset="UTF-8" />
 		<!-- js -->
-		<script defer src="./src/js/index.js"></script>
+		<script defer src="./index.js"></script>
 		<!-- css -->
 		<link rel="stylesheet" href="../.././styles/global.css" />
 		<link rel="stylesheet" href="../../styles/tailwind.css" />
@@ -44,14 +44,15 @@
 							<span data-loc>Confirm</span>
 						</button>
 					</div>
-					<div class="mx-auto pb-3">
-						<details class="details mb-5 transform duration-200 ease-in" onclick="showMoreOptions()">
-							<summary data-loc class="summary mb-3 cursor-pointer font-bold">More options</summary>
+					<div class="mx-auto mb-6">
+						<details class="details transform duration-200 ease-in" onclick="showMoreOptions()">
+							<summary data-loc class="summary cursor-pointer font-bold">More options</summary>
 						</details>
 					</div>
 				</div>
 			</div>
-			<div id="more_options" class="animation invisible mx-auto mt-20 mb-20 hidden w-2/3 rounded-2xl bg-gray-800 pb-10 pt-1">
+
+			<div class="moreOptions animation invisible mx-auto mt-20 mb-20 hidden w-2/3 rounded-2xl bg-gray-800 pb-10 pt-1">
 				<div>
 					<h3 data-loc>Window capture</h3>
 					<h4 data-loc>Allows screenshots and screen capture. You can record or screenshot the app until you restart Authme.</h4>
