--- a/app/landing/index.html
+++ b/app/landing/index.html
@@ -28,7 +28,7 @@
 				<h3 data-loc class="pt-5">Welcome to Authme!</h3>
 				<h4 data-loc>Choose how you want to use Authme. Your 2FA codes are encrypted either way.</h4>
 
-				<div class="flex flex-row justify-center pb-5">
+				<div class="flex flex-row justify-center pb-3">
 					<div class="my-3 ml-3 mr-1.5 flex w-1/2 flex-wrap items-center justify-center rounded-2xl bg-gray-700 p-4">
 						<h4 data-loc class="m-0 mb-3">Require password</h4>
 						<h5 data-loc class="m-0 mb-3">You have to type in your password every time you launch Authme.</h5>
@@ -52,10 +52,18 @@
 						</button>
 					</div>
 				</div>
+
+				<div class="flex items-center justify-center">
+					<div class="mx-auto pb-6">
+						<details class="details transform duration-200 ease-in" onclick="showMoreOptions()">
+							<summary data-loc class="summary cursor-pointer font-bold">More options</summary>
+						</details>
+					</div>
+				</div>
 			</div>
 
 			<div class="createPassword mx-auto mb-16 hidden w-2/3 rounded-2xl bg-gray-800">
-				<h3 data-loc class="pt-3">Create password</h3>
+				<h3 data-loc class="pt-5">Create password</h3>
 				<h4 data-loc id="text">Create a strong password to encrypt your 2FA codes!</h4>
 				<div class="flex select-none flex-row flex-wrap justify-center gap-3 pb-5">
 					<div class="flex flex-col">
@@ -81,12 +89,26 @@
 						</svg>
 					</div>
 				</div>
-				<button class="buttoni mb-5" onclick="comparePasswords()">
+				<button class="buttoni mb-8" onclick="comparePasswords()">
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
 						<path stroke-linecap="round" stroke-linejoin="round" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
 					</svg>
 					<span data-loc>Confirm</span>
 				</button>
+			</div>
+
+			<div class="moreOptions animation invisible mx-auto mt-20 mb-20 hidden w-2/3 rounded-2xl bg-gray-800 pb-10 pt-1">
+				<div>
+					<h3 data-loc>Window capture</h3>
+					<h4 data-loc>Allows screenshots and screen capture. You can record or screenshot the app until you restart Authme.</h4>
+					<div class="mx-auto flex h-[68px] w-72 items-center justify-center rounded-full bg-white">
+						<div class="relative mr-2 inline-block w-10 select-none rounded-full border-2 border-gray-900 bg-gray-900 align-middle">
+							<input onclick="toggleWindowCapture()" id="tgl0" type="checkbox" class="toggle absolute right-5 top-1 block h-4 w-4 cursor-pointer appearance-none rounded-full bg-black outline-none duration-200 ease-in checked:bg-white focus:outline-none" />
+							<label for="tgl0" class="toggle-bg block h-6 cursor-pointer overflow-hidden rounded-full bg-white"></label>
+						</div>
+						<span id="tgt0" class="text-xl text-black">Off</span>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
